@startuml
package [..] as C_0016431317663134048372 {
package [src] as C_0010634688166860467214 {
package [models] as C_0001626712604113445200 {
abstract "::Item" as C_0005967165952864249862
abstract C_0005967165952864249862 {
+Item() : void
+Item(std::string_view name, std::string_view desc, int default_price, int add_price = 0) : void
+~Item() = default : void
..
+addToPrice(int add) : void
+getDesc() const : const std::string &
{abstract} +getItemType() const = 0 : ItemType
+getName() const : const std::string &
+getPrice() const : int
+getPriceModified() const : int
+getQualityPrice() const : int
+setDefaultDesc() : void
+setDefaultPrice() : void
+setDesc(std::string_view d) : void
+setName(std::string_view n) : void
+setQualityPrice(int q_price) : void
+toJson() const : QJsonObject
__
#_default_price : const int
#_desc : std::string
#_name : std::string
#_price : int
#_quality_price : int
}
class "::Weapon" as C_0009880302970961535201
class C_0009880302970961535201 {
+Weapon() : void
+Weapon(std::string_view name, std::string_view desc, int default_price, int price, WeaponType weapon_type, int dmg_desc, DMGType dmg_type, Attribute accuracy1, Attribute accuracy2, int accuracy_bonus, bool isSingleHanded, bool isRange, bool isMartial) : void
..
+getAccuracy1() const : Attribute
+getAccuracy2() const : Attribute
+getAccuracyBonus() const : int
+getDmgDesc() const : int
+getDmgType() const : DMGType
+getIsMartial() const : bool
+getIsRange() const : bool
+getIsSingleHanded() const : bool
+getItemType() const : ItemType
+getWeaponType() const : WeaponType
+setAccuracy1(Attribute a1) : void
+setAccuracy2(Attribute a2) : void
+setAccuracyBonus(int ab) : void
+setDmgDesc(int dd) : void
+setDmgType(DMGType dt) : void
+setIsMartial(bool im) : void
+setIsRange(bool ir) : void
+setIsSingleHanded(bool ish) : void
+setType(WeaponType t) : void
+toJson() const : QJsonObject
__
-_accuracy1 : Attribute
-_accuracy2 : Attribute
-_accuracy_bonus : int
-_dmg_desc : int
-_dmg_type : DMGType
-_isMartial : bool
-_isRange : bool
-_isSingleHanded : bool
-_weapon_type : WeaponType
}
class "::Player" as C_0003692324345213718176
class C_0003692324345213718176 {
+Player() : void
+Player(std::string_view character_name, std::string_view author_name, int level, Attribute p_die1, Attribute p_die2, WeaponType pref_weapon, bool canMartialWeapon, bool canMartialArmor, bool canRange, bool canShield) : void
..
+getAuthorName() const : const std::string &
+getCanMartialArmor() const : bool
+getCanMartialWeapon() const : bool
+getCanRange() const : bool
+getCanShield() const : bool
+getCharacterName() const : const std::string &
+getLevel() const : int
+getPreferredWeaponType() const : WeaponType
+getPrimaryDie1() const : Attribute
+getPrimaryDie2() const : Attribute
+setAuthorName(std::string_view author_name) : void
+setCanMartialArmor(bool canMartialArmor) : void
+setCanMartialWeapon(bool canMartialWeapon) : void
+setCanRange(bool canRange) : void
+setCanShield(bool canShield) : void
+setCharacterName(std::string_view ch_name) : void
+setLevel(int level) : void
+setPreferredWeaponType(WeaponType pref_weapon) : void
+setPrimaryDie1(Attribute p_die1) : void
+setPrimaryDie2(Attribute p_die2) : void
+toJson() const : QJsonObject
__
-_author_name : std::string
-_canMartialArmor : bool
-_canMartialWeapon : bool
-_canRange : bool
-_canShield : bool
-_character_name : std::string
-_level : int
-_preferred_weapon_type : WeaponType
-_primary_die1 : Attribute
-_primary_die2 : Attribute
}
}
package [systems] as C_0016692703261607978348 {
abstract "::GeneratorStrategy" as C_0003391557478520177739
abstract C_0003391557478520177739 {
+~GeneratorStrategy() = default : void
..
{abstract} +generate(const Player & player) = 0 : std::unique_ptr<Item>
__
}
class "::WeaponGenerator" as C_0004150406585329947926
class C_0004150406585329947926 {
+WeaponGenerator(const QString & file_path) : void
..
-filterByPlayerAttributesHard(const Player & player) const : std::vector<const Weapon *>
-filterByPlayerAttributesSoft(const Player & player) const : std::vector<const Weapon *>
-filterByPlayerPreference(const Player & player) const : std::vector<const Weapon *>
+generate(const Player & player) : std::unique_ptr<Item>
{static} -isWeaponUsable(const Player & player, const Weapon & weapon) : bool
__
-_cache_weapons : std::vector<std::unique_ptr<Weapon>>
}
}
}
}
C_0005967165952864249862 <|-- C_0009880302970961535201
C_0003391557478520177739 ..> C_0003692324345213718176
C_0003391557478520177739 ..> C_0005967165952864249862
C_0004150406585329947926 ..> C_0003692324345213718176
C_0004150406585329947926 ..> C_0005967165952864249862
C_0004150406585329947926 o-- C_0009880302970961535201 : -_cache_weapons
C_0003391557478520177739 <|-- C_0004150406585329947926

'Generated with clang-uml, version 0.6.2
'LLVM version clang version 20.1.7 (https://github.com/llvm/llvm-project.git 6146a88f60492b520a36f8f8f3231e15f3cc6082)
@enduml
